[metadata]
description-file = README.rst

[nosetests]
verbosity = 3
with-doctest = 1
with-coverage = 1
cover-package = python_utils
cover-min-percentage = 100
detailed-errors = 1
debug = nose.loader
pdb = 1

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build/html

[bdist_wheel]
universal = 1

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

